--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "orinoco-backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.16.4",
-    "uuid": "^3.3.2"
-  }
+	"name": "orinoco-backend",
+	"version": "1.0.0",
+	"description": "",
+	"main": "server.js",
+	"scripts": {
+		"test": "...",
+		"build": "webpack"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"bootstrap": "^5.0.1",
+		"express": "^4.16.4",
+		"uuid": "^3.3.2"
+	},
+	"devDependencies": {
+		"webpack-cli": "^4.7.2"
+	}
 }
